:sparkles: seperate item and tabel in admin and api
