# src/referentielijsten/api/filterset.py
@@ -4,23 +4,62 @@ from django.utils.translation import gettext_lazy as _
 
 from django_filters.rest_framework import FilterSet, filters
 
-from .models import Tabel
+from .models import Item, Tabel
 
 
 class TabelFilterset(FilterSet):
-    geldig = filters.BooleanFilter(
-        help_text=_("Zoek klantcontacten met specifieke tekst in inhoud"),
-        method="filter_geldig",
+    is_geldig = filters.BooleanFilter(
+        help_text=_("Of de `einddatum_geldigheid` niet in het verleden ligt."),
+        method="filter_is_geldig",
     )
 
     class Meta:
         model = Tabel
-        fields = ("code", "geldig")
+        fields = ("code", "is_geldig")
 
-    def filter_geldig(self, queryset, name, value):
+    def filter_is_geldig(self, queryset, name, value):
         if value:
             return queryset.filter(
                 Q(einddatum_geldigheid__isnull=True)
                 | Q(einddatum_geldigheid__gt=timezone.now())
             )
         return queryset.filter(einddatum_geldigheid__lt=timezone.now())
+
+
+class ItemFilterset(FilterSet):
+    is_geldig = filters.BooleanFilter(
+        help_text=_(
+            "Of de `begindatum_geldigheid` niet in de toekomst ligt en de `einddatum_geldigheid` "
+            "niet in het verleden ligt."
+        ),
+        method="filter_is_geldig",
+    )
+    tabel__code = filters.CharFilter(
+        help_text=_("De naam van de `tabel__code` gelinkt aan de items: VERPLICHT")
+    )
+
+    class Meta:
+        model = Item
+        fields = ("tabel__code", "is_geldig")
+
+    def filter_is_geldig(self, queryset, name, value):
+        if value:
+            return queryset.filter(
+                (
+                    Q(begindatum_geldigheid__isnull=True)
+                    | Q(begindatum_geldigheid__lte=timezone.now())
+                )
+                & (
+                    Q(einddatum_geldigheid__isnull=True)
+                    | Q(einddatum_geldigheid__gt=timezone.now())
+                )
+            )
+
+        return queryset.filter(
+            (
+                Q(einddatum_geldigheid__lt=timezone.now())
+                & Q(begindatum_geldigheid__gt=timezone.now())
+            )
+            | Q(einddatum_geldigheid__lt=timezone.now())
+            | Q(begindatum_geldigheid__gt=timezone.now())
+        )
