# src/referentielijsten/api/serializers.py
@@ -1,14 +1,24 @@
-from distutils.util import strtobool
-
-from django.db.models import Q
-from django.utils import timezone
 from django.utils.translation import gettext_lazy as _
 
-from drf_spectacular.utils import extend_schema_field
 from rest_framework import serializers
 from vng_api_common.serializers import GegevensGroepSerializer
 
 from .models import Item, Tabel
+
+
+class ValidationErrorSerializer(serializers.Serializer):
+    """
+    Validation error format, following the NL API Strategy.
+
+    See https://docs.geostandaarden.nl/api/API-Strategie/ and
+    https://docs.geostandaarden.nl/api/API-Strategie-ext/#error-handling-0
+    """
+
+    name = serializers.CharField(help_text=_("Name of the field with invalid data"))
+    code = serializers.CharField(help_text=_("System code of the type of error"))
+    reason = serializers.CharField(
+        help_text=_("Explanation of what went wrong with the data")
+    )
 
 
 class ItemSerializer(serializers.ModelSerializer):
@@ -30,7 +40,6 @@ class BeheerderSerializer(GegevensGroepSerializer):
 
 
 class TabelSerializer(serializers.ModelSerializer):
-    items = serializers.SerializerMethodField()
     beheerder = BeheerderSerializer(
         required=False,
         allow_null=True,
@@ -44,24 +53,4 @@ class TabelSerializer(serializers.ModelSerializer):
             "naam",
             "beheerder",
             "einddatum_geldigheid",
-            "items",
         )
-
-    @extend_schema_field(field=ItemSerializer)
-    def get_items(self, obj):
-        request = self.context["request"]
-        geldig = request.query_params.get("geldig", "false")
-        if strtobool(geldig):
-            item_qs = obj.item_set.filter(
-                (
-                    Q(begindatum_geldigheid__isnull=True)
-                    | Q(begindatum_geldigheid__lte=timezone.now())
-                )
-                & (
-                    Q(einddatum_geldigheid__isnull=True)
-                    | Q(einddatum_geldigheid__gt=timezone.now())
-                )
-            )
-            return ItemSerializer(item_qs, many=True).data
-
-        return ItemSerializer(obj.item_set.all(), many=True).data
